# rust-skeleton

./: Cargo.toml  README.md
scripts/: new_app.ps1
src/: app.rs  config.rs  main.rs
wix/: main.wxs
