[package]
name = "rust-skeleton"
version = "0.1.0"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "Rust + egui Windows app starter"
license = "MIT"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[build-dependencies]
winres = "0.1"

[package.metadata.wix]
upgrade-guid = "00000000-0000-0000-0000-000000000001"
path-guid    = "00000000-0000-0000-0000-000000000002"
license      = false
eula         = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
